# price-compare-agent

./: package.json  pnpm-lock.yaml
docs/: COMPLETION_SUMMARY.md  OPTIMIZATION_REPORT.md  PROJECT_GUIDEBOOK.md  QUICK_REFERENCE.md  USER_GUIDE.md
src/: App.tsx
src-tauri/: Cargo.toml
src-tauri/src/: lib.rs
src-tauri/src/agent/: mod.rs  rules.rs  tools.rs
src-tauri/src/commands/: settings.rs
src-tauri/src/models/: product.rs
src/api/: settings.ts
src/components/: ChatBubble.tsx  SettingsDrawer.tsx
src/types/: product.ts
