[package]
name = "price-compare-agent"
version = "1.1.0"
description = "跨平台自动比价智能体"
authors = ["Red King Group"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "price_compare_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.5", features = [] }
tauri-plugin-opener = "2.5.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
async-openai = { version = "0.41.1", features = [
  "_api",
  "chat-completion",
  "chat-completion-types",
] }
async-trait = "0.1.89"
anyhow = "1.0.103"
reqwest = { version = "0.13.4", features = ["json"] }
dotenvy = "0.15.7"
tokio = { version = "1.52.3", features = ["full"] }
regex = "1.11"
